--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@ body {
   overflow: auto;
   background: linear-gradient(
     315deg,
-    rgb(34, 17, 30) 3%,
-    rgb(17, 17, 17) 38%,
+    rgb(32, 1, 30) 3%,
+    rgb(19, 0, 18) 38%,
     rgb(11, 11, 11) 68%,
     rgb(0, 0, 0) 98%
   );
@@ -52,24 +52,23 @@ body {
   opacity: 0.9;
 }
 
-@keyframes wave {
-  2% {
-    transform: translateX(1);
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
   }
-
-  25% {
-    transform: translateX(-25%);
-  }
-
-  50% {
-    transform: translateX(-50%);
-  }
-
-  75% {
-    transform: translateX(-25%);
-  }
-
   100% {
-    transform: translateX(1);
+    opacity: 1;
   }
+}
+
+.scroll-animation {
+  opacity: 0;
+}
+
+.scroll-animation.scroll-animation-start {
+  animation: fadeIn 0.5s ease forwards;
+}
+
+.scroll-animation.scroll-animation-start + .scroll-animation {
+  animation-delay: 0.3s;
 }
